--- a/index.html
+++ b/index.html
@@ -3,20 +3,20 @@
 
 <head>
   <meta charset="UTF-8">
-  <title>freeCodeCamp : Build a Personal Portfolio Webpage</title>
-  <title>UI/UX Design and Development</title>
-  
+  <title>劳资这么可爱</title>
+  <title>小可爱们的团队介绍</title>
+
   <link rel='stylesheet prefetch' href='http://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css'>
 <link rel='stylesheet prefetch' href='https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css'>
 
       <link rel="stylesheet" href="css/style.css">
 
-  
+
 </head>
 
 <body>
 
-  
+
 <header class="navbar navbar-default navbar-fixed-top" id="banner">
   <div class="container"><a class="scrollable" href="#top"><img src="http://qlip.in/images/qlip.png" alt="qlip | UI/UX Design and Development" title="qlip | UI/UX Design and Development"/></a>
     <button class="navbar-toggle collapsed" type="button" data-toggle="collapse" data-target="#navbar" aria-expanded="false"><span class="sr-only">Toggle navigation</span><span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span></button>
@@ -101,7 +101,7 @@
       </ul>
     </div>
   </div>
-  <div id="footer-below">qlip © 
+  <div id="footer-below">qlip ©
     <script>document.write(new Date().getFullYear())</script>. All Rights Reversed
   </div>
 </footer>
@@ -110,7 +110,7 @@
 <script src='http://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.3/jquery.easing.min.js'></script>
 <script src='http://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js'></script>
 
-  
+
 
     <script  src="js/index.js"></script>
 
