--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
   <header>
     <div class="intro-text">
       <p>Front-End Developer and UX/UI designer, with practical experience in project management, branding strategy, and creative direction;  devoted to functional programming and information architecture.</p>
-      <hr class="star-bright"/><span class="skills">Web Developer - User Experience Designer - Graphic Artist</span>
+      <hr class="star-bright"/><span class="skills">小可爱们的团队介绍</span>
     </div><img src="http://qlip.in/images/avatar.jpg" alt="A picture of Justin looking at San Francisco from across the Golden Gate Bridge." title="A picture of Justin looking at San Francisco from across the Golden Gate Bridge."/>
   </header>
   <!-- Gallery Grid Section-->
