--- a/index.html
+++ b/index.html
@@ -22,9 +22,9 @@
     <button class="navbar-toggle collapsed" type="button" data-toggle="collapse" data-target="#navbar" aria-expanded="false"><span class="sr-only">Toggle navigation</span><span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span></button>
     <nav class="collapse navbar-collapse" id="navbar" role="navigation">
       <ul class="nav navbar-nav navbar-right">
-        <li><a class="scrollable" href="#top">About</a></li>
-        <li><a class="scrollable" href="#portfolio">Portfolio</a></li>
-        <li><a class="scrollable" href="#contact">Contact</a></li>
+        <li><a class="scrollable" href="#top">关于我们</a></li>
+        <li><a class="scrollable" href="#portfolio">合作洽谈</a></li>
+        <li><a class="scrollable" href="#contact">联系方式</a></li>
       </ul>
     </nav>
   </div>
@@ -33,7 +33,7 @@
 <main>
   <header>
     <div class="intro-text">
-      <p>Front-End Developer and UX/UI designer, with practical experience in project management, branding strategy, and creative direction;  devoted to functional programming and information architecture.</p>
+      <p>Hello，我们是四朵小可爱，我们为什么这么可爱呢！没有为什么，就是可爱，谢谢！不但可爱，而且单身哦！</p>
       <hr class="star-bright"/><span class="skills">小可爱们的团队介绍</span>
     </div><img src="http://qlip.in/images/avatar.jpg" alt="A picture of Justin looking at San Francisco from across the Golden Gate Bridge." title="A picture of Justin looking at San Francisco from across the Golden Gate Bridge."/>
   </header>
