--- a/index.html
+++ b/index.html
@@ -31,12 +31,15 @@
 </header>
 <!-- end header--><a id="top" name="home"></a>
 <main>
-  <header>
+  <header background="https://ws4.sinaimg.cn/large/006tKfTcgy1fmrszm7d7oj31400u0wj2.jpg">
+   <p>test</p>
+  </header>
+  <section id="coach">
     <div class="intro-text">
       <p>Hello，我们是四朵小可爱，我们为什么这么可爱呢！没有为什么，就是可爱，谢谢！不但可爱，而且单身哦！</p>
       <hr class="star-bright"/><span class="skills">小可爱们的团队介绍</span>
-    </div><img src="http://qlip.in/images/avatar.jpg" alt="A picture of Justin looking at San Francisco from across the Golden Gate Bridge." title="A picture of Justin looking at San Francisco from across the Golden Gate Bridge."/>
-  </header>
+    </div><img src="http://qlip.in/images/avatar.jpg" alt="A picture of Li Weiye." title="A picture of Justin looking at San Francisco from across the Golden Gate Bridge."/>
+  </section>
   <!-- Gallery Grid Section-->
   <section id="portfolio">
     <h2>Portfolio</h2>
