--- a/index.html
+++ b/index.html
@@ -4,14 +4,9 @@
 <head>
   <meta charset="UTF-8">
   <title>劳资这么可爱</title>
-  <title>小可爱们的团队介绍</title>
-
   <link rel='stylesheet prefetch' href='http://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css'>
-<link rel='stylesheet prefetch' href='https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css'>
-
-      <link rel="stylesheet" href="css/style.css">
-
-
+  <link rel='stylesheet prefetch' href='https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css'>
+  <link rel="stylesheet" href="css/style.css">
 </head>
 
 <body>
@@ -32,6 +27,9 @@
 <!-- end header--><a id="top" name="home"></a>
 <main>
   <header>
+    <div class="header_picture">
+      <img src="http://pic.90sjimg.com/back_pic/qk/back_origin_pic/00/02/35/bd79c76202a6edc10a5bac58ffacebc7.jpg">
+    </div>
     <div class="intro-text">
       <p>Hello，我们是四朵小可爱，我们为什么这么可爱呢！没有为什么，就是可爱，谢谢！不但可爱，而且单身哦！</p>
       <hr class="star-bright"/><span class="skills">小可爱们的团队介绍</span>
