--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 </header>
 <!-- end header--><a id="top" name="home"></a>
 <main>
-  <header>
+  <dic class="main_header">
     <div class="header_picture">
       <img src="http://pic.90sjimg.com/back_pic/qk/back_origin_pic/00/02/35/bd79c76202a6edc10a5bac58ffacebc7.jpg">
     </div>
