--- a/index.html
+++ b/index.html
@@ -29,10 +29,8 @@
   <dic class="main_header">
     <div class="header_picture">
       <img src="http://pic.90sjimg.com/back_pic/qk/back_origin_pic/00/02/35/bd79c76202a6edc10a5bac58ffacebc7.jpg">
+      <span>我们追求进步！渴望拥抱更精彩的明天！</span>
     </div>
-    <div class="intro-text">
-      <p>Hello，我们是四朵小可爱，我们为什么这么可爱呢！没有为什么，就是可爱，谢谢！不但可爱，而且单身哦！</p>
-      <hr class="star-bright"/><span class="skills">小可爱们的团队介绍</span>
   </header>
   <!-- Gallery Grid Section-->
   <section id="portfolio">
