--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 <main>
   <dic class="main_header">
     <div class="header_picture">
-      <img src="http://pic.90sjimg.com/back_pic/qk/back_origin_pic/00/02/35/bd79c76202a6edc10a5bac58ffacebc7.jpg">
+      <img src="http://www.005.tv/uploads/allimg/160316/13460951c-5.jpg">
       <span>我们追求进步！渴望拥抱更精彩的明天！</span>
     </div>
   </header>
