--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 <main>
   <dic class="main_header">
     <div class="header_picture">
-      <img src="http://www.005.tv/uploads/allimg/160316/13460951c-5.jpg">
+      <img src="http://e.hiphotos.baidu.com/zhidao/pic/item/1e30e924b899a9013084f10c1f950a7b0208f553.jpg">
       <span>我们追求进步！渴望拥抱更精彩的明天！</span>
     </div>
   </header>
