--- a/index.html
+++ b/index.html
@@ -28,7 +28,9 @@
 <main>
   <dic class="main_header">
     <div class="header_picture">
-      <img src="http://e.hiphotos.baidu.com/zhidao/pic/item/1e30e924b899a9013084f10c1f950a7b0208f553.jpg">
+      <img src="http://pic.90sjimg.com/back_pic/qk/back_origin_pic/00/02/71/81bc317166800cdf01e7bb16eb5ff756.jpg">
+    </div>
+    <div class="header_text">
       <span>我们追求进步！渴望拥抱更精彩的明天！</span>
     </div>
   </header>
