--- a/index.html
+++ b/index.html
@@ -4,14 +4,9 @@
 <head>
   <meta charset="UTF-8">
   <title>劳资这么可爱</title>
-  <title>小可爱们的团队介绍</title>
-
   <link rel='stylesheet prefetch' href='http://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css'>
-<link rel='stylesheet prefetch' href='https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css'>
-
-      <link rel="stylesheet" href="css/style.css">
-
-
+  <link rel='stylesheet prefetch' href='https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css'>
+  <link rel="stylesheet" href="css/style.css">
 </head>
 
 <body>
@@ -31,12 +26,62 @@
 </header>
 <!-- end header--><a id="top" name="home"></a>
 <main>
-  <header>
+
+  <!-- <section id="Carousel"> -->
+        <div id="myCarousel" class="carousel slide overlay-black">
+          <!-- 轮播（Carousel）指标 -->
+          <ol class="carousel-indicators">
+              <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
+              <li data-target="#myCarousel" data-slide-to="1"></li>
+              <li data-target="#myCarousel" data-slide-to="2"></li>
+          </ol>
+          <!-- 轮播（Carousel）项目 -->
+          <div class="carousel-inner">
+              <div class="item active">
+                  <img src="https://ws1.sinaimg.cn/large/006tKfTcgy1fmrv6jjtunj30ve0m8mze.jpg" alt="First slide">
+                  <div class="carousel-caption">
+                      <h2>小雅</h2>
+                      <p>我喜欢一切美好的东西</p>
+                    </div>
+              </div>
+              <div class="item">
+                  <img src="https://ws4.sinaimg.cn/large/006tKfTcgy1fmrwz8nx2yj30ve0m8gng.jpg" alt="Second slide">
+                  <div class="carousel-caption">
+                      <h2>Maggie</h2>
+                      <p>我非常擅长打游戏</p>
+                    </div>
+              </div>
+              <div class="item">
+                  <img src="https://ws4.sinaimg.cn/large/006tKfTcgy1fmrtb8f9loj31kw0va781.jpg" alt="Third slide">
+                  <div class="carousel-caption">
+                      <h2>于潇</h2>
+                      <p>劳资那么可爱</p>
+                    </div>
+              </div>
+          </div>
+          <!-- 轮播（Carousel）导航 -->
+          <a class="carousel-control left" href="#myCarousel"
+              data-slide="prev">&lsaquo;
+          </a>
+          <a class="carousel-control right" href="#myCarousel"
+              data-slide="next">&rsaquo;
+          </a>
+      </div>
+  <!-- </section> -->
+
+  <!-- <header>
     <div class="intro-text">
       <p>Hello，我们是四朵小可爱，我们为什么这么可爱呢！没有为什么，就是可爱，谢谢！不但可爱，而且单身哦！</p>
       <hr class="star-bright"/><span class="skills">小可爱们的团队介绍</span>
     </div><img src="http://qlip.in/images/avatar.jpg" alt="A picture of Justin looking at San Francisco from across the Golden Gate Bridge." title="A picture of Justin looking at San Francisco from across the Golden Gate Bridge."/>
-  </header>
+
+  <div class="main_header">
+    <div class="header_picture">
+      <img src="http://pic.90sjimg.com/back_pic/qk/back_origin_pic/00/02/35/bd79c76202a6edc10a5bac58ffacebc7.jpg">
+      <span>我们追求进步！渴望拥抱更精彩的明天！</span>
+    </div>
+
+  </header> -->
   <!-- Gallery Grid Section-->
   <section id="portfolio">
     <h2>Portfolio</h2>
