--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="UTF-8">
-  <title>Cool Five</title>
+  <title>劳资这么可爱</title>
   <link rel='stylesheet prefetch' href='http://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css'>
   <link rel='stylesheet prefetch' href='https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css'>
   <link rel="stylesheet" href="css/style.css">
@@ -13,18 +13,17 @@
 
 
 <header class="navbar navbar-default navbar-fixed-top" id="banner">
-  <div class="container"><a class="scrollable" href="#top"><img src="http://qlip.in/images/qlip.png" alt="qlip | UI/UX Design and Development" title="qlip | UI/UX Design and Development"/></a>
+  <div class="container"><a class="scrollable" href="#top"></a>
     <button class="navbar-toggle collapsed" type="button" data-toggle="collapse" data-target="#navbar" aria-expanded="false"><span class="sr-only"></span><span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span></button>
     <nav class="collapse navbar-collapse" id="navbar" role="navigation">
       <ul class="nav navbar-nav navbar-right">
-        <li><a class="scrollable" href="#top">Home</a></li>
-        <li><a class="scrollable" href="#portfolio">About us</a></li>
-        <li><a class="scrollable" href="#contact">Contact us</a></li>
+        <li><a class="scrollable" href="#top">首页</a></li>
+        <li><a class="scrollable" href="#portfolio">关于我们</a></li>
+        <li><a class="scrollable" href="#contact">联系我们</a></li>
       </ul>
     </nav>
   </div>
 </header>
-<!-- end header--><a id="top" name="home"></a>
 <main>
   <dic class="main_header">
     <div class="header_picture">
