--- a/index.html
+++ b/index.html
@@ -28,6 +28,10 @@
       </ul>
     </nav>
   </div>
+  <div class="header_picture">
+    <img src="http://img.xqxtp.com/201601/21/14/gdwjmi0kbyh.jpg">
+  </div>
+
 </header>
 <main>
   <!-- Gallery Grid Section-->
