--- a/index.html
+++ b/index.html
@@ -23,10 +23,11 @@
       </ul>
     </nav>
   </div>
+</div>
   <div class="header_picture">
     <img src="http://img.xqxtp.com/201601/21/14/gdwjmi0kbyh.jpg">
   </div>
-
+</div>
 </header>
 <main>
   <!-- Gallery Grid Section-->
