--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="UTF-8">
-  <title>劳资这么可爱</title>
+  <title>可爱教练带领的不可爱战队</title>
   <link rel='stylesheet prefetch' href='http://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css'>
   <link rel='stylesheet prefetch' href='https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css'>
   <link rel="stylesheet" href="css/style.css">
@@ -18,8 +18,6 @@
         <li><a class="scrollable" href="#top">首页</a></li>
         <li><a class="scrollable" href="#portfolio">关于我们</a></li>
         <li><a class="scrollable" href="#contact">联系我们</a></li>
-        <li><a class="scrollable">合作洽谈</a></li>
-        <li><a class="scrollable">联系方式</a></li>
       </ul>
     </nav>
   </div>
@@ -38,19 +36,21 @@
             <div class="item active">
                 <a href=" ">
                     <img src="https://ww4.sinaimg.cn/large/006tNbRwgy1fd9zj4zdvvj315o0kuwia.jpg">
-                    <div class="carousel-caption"></div>
+                    <div class="carousel-caption" id="target1">Code to learn, <br/>Learn to code
+                
+                    </div>
                 </a >
             </div>
             <div class="item">
                 <a href="javascript:;">
                     <img src="https://ww3.sinaimg.cn/large/006tNbRwgy1fdasnwkm3tj315o0kuado.jpg">
-                    <div class="carousel-caption"></div>
+                    <div class="carousel-caption">Code to learn, <br/>Learn to code</div>
                 </a >
             </div>
             <div class="item">
                 <a href="javascript:;">
                     <img src="https://ww3.sinaimg.cn/large/006tNbRwgy1fdat9p65qfj31040i2adf.jpg">
-                    <div class="carousel-caption"></div>
+                    <div class="carousel-caption">Code to learn, <br/>Learn to code</div>
                 </a >
             </div>
         </div>
@@ -65,23 +65,30 @@
             <span class="sr-only">Next</span>
         </a >
     </div>
+
     </section>
   <!-- Gallery Grid Section-->
   <section id="portfolio">
-    <h2>Portfolio</h2>
+    <h2>组员介绍</h2>
     <hr class="star-dark"/>
-    <ul class="grid">
-      <li><img src="http://qlip.in/images/YMCA-Realtor-Donation-3.jpg" alt=""/></li>
-      <li><img src="http://qlip.in/images/webcaballero.jpg" alt=""/></li>
-      <li><img src="http://qlip.in/images/webmarqas.jpg" alt=""/></li>
-      <li><img src="http://qlip.in/images/webbrandaxis.jpg" alt=""/></li>
-      <li><img src="http://qlip.in/images/panacea1.jpg" alt=""/></li>
-      <li><img src="http://qlip.in/images/webgatomalo.jpg" alt=""/></li>
+    <ul class="grid" class="height393">
+      <li><img src="https://ws4.sinaimg.cn/large/006tKfTcgy1fmrzae3z57j30zk0qowhc.jpg" alt=""/>
+      <p class="text-center"><button class="well text-primary btn-block"><i class="glyphicon glyphicon-user"></i>陈颖君</button></i></p>
+      </li>
+      <li><img src="https://ws3.sinaimg.cn/large/006tKfTcgy1fmryykqekkj30zk0qodku.jpg" alt=""/>
+        <p class="text-center"><button class="well text-primary btn-block"><i class="glyphicon glyphicon-user"></i>于潇</button></i></p>
+      </li>
+      <li><img src="https://ws4.sinaimg.cn/large/006tKfTcgy1fmrzbf40c2j30zk0qoq79.jpg" alt=""/>
+        <p class="text-center"><button class="well text-primary btn-block"><i class="glyphicon glyphicon-user"></i>袁娴雅</button></i></p>
+      </li>
+      <li><img src="https://ws1.sinaimg.cn/large/006tKfTcgy1fmrzchyczhj30zk0qong1.jpg" alt=""/>
+        <p class="text-center"><button class="well text-primary btn-block"><i class="glyphicon glyphicon-user"></i>美景</button></i></p>
+      </li>
     </ul>
   </section>
   <!-- Contact Section-->
   <section id="contact">
-    <h2>Contact Me</h2>
+    <h2>Contact US</h2>
     <hr class="star-dark"/>
     <div>
       <form id="contactForm" novalidate="">
@@ -104,9 +111,9 @@
         <button type="submit">Send</button>
       </form>
       <div>
-        <p>Want to get in touch with me? Be it to request more info about myself or my experience, to ask for my resume, tips on how to solve your sudoku, random questions about the universe and the meaning of life, or even if only for some nice Fika here in stunning Toronto... just feel free to drop me a line anytime.</p>
+        <p>Want to get in touch with beautiful girls? Be it to request more info about myself ，just feel free to drop me a line anytime.</p>
         <p>I promise to reply A.S.A.P.</p>
-        <p>Note: No spam/soliciting pour moi, merci :)</p>
+        <p>Note: two of us are still single now!</p>
       </div>
     </div>
   </section>
@@ -118,19 +125,19 @@
   <div id="footer-above">
     <div>
       <h3>About this page</h3>
-      <p>Made with <i class="fa fa-fw fa-coffee"></i> and <i class="fa fa-fw fa-music"></i><br/>by <a href="http://qlip.in">Justin Sane</a>.</p>
+      <p>Made with <i class="fa fa-fw fa-coffee"></i> and <i class="fa fa-fw fa-music"></i><br/>by 不可爱战队.</p>
     </div>
     <div>
       <h3>Around the Web</h3>
       <ul>
-        <li><a class="button social" href="https://www.linkedin.com/in/hallaathrad"><i class="fa fa-fw fa-linkedin"></i></a></li>
-        <li><a class="button social" href="https://github.com/hallaathrad"><i class="fa fa-fw fa-github"></i></a></li>
-        <li><a class="button social" href="https://twitter.com/hallaathrad"><i class="fa fa-fw fa-twitter"></i></a></li>
-        <li><a class="button social" href="https://www.flickr.com/photos/hallaathrad/" title="My Flickr"><i class="fa fa-fw fa-flickr"></i></a></li>
+        <li><a class="button social" href=""><i class="fa fa-fw fa-linkedin"></i></a></li>
+        <li><a class="button social" href=""><i class="fa fa-fw fa-github"></i></a></li>
+        <li><a class="button social" href=""><i class="fa fa-fw fa-twitter"></i></a></li>
+        <li><a class="button social" href="" title="My Flickr"><i class="fa fa-fw fa-flickr"></i></a></li>
       </ul>
     </div>
   </div>
-  <div id="footer-below">qlip ©
+  <div id="footer-below">
     <script>document.write(new Date().getFullYear())</script>. All Rights Reversed
   </div>
 </footer>
@@ -138,7 +145,9 @@
   <script src='http://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script>
 <script src='http://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.3/jquery.easing.min.js'></script>
 <script src='http://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js'></script>
-
+<script>$(document).ready(function(){
+ $("button").addClass("animated bounce")
+});</script>
 
 
     <script  src="js/index.js"></script>
