--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
             <div class="item active">
                 <a href=" ">
                     <img src="https://ww4.sinaimg.cn/large/006tNbRwgy1fd9zj4zdvvj315o0kuwia.jpg">
-                    <div class="carousel-caption" id="target1">Code to learn, <br/>Learn to code
+                    <div class="carousel-caption" id="target1">Code to learn <br/>Learn to code
                 
                     </div>
                 </a >
@@ -44,13 +44,13 @@
             <div class="item">
                 <a href="javascript:;">
                     <img src="https://ww3.sinaimg.cn/large/006tNbRwgy1fdasnwkm3tj315o0kuado.jpg">
-                    <div class="carousel-caption">Code to learn, <br/>Learn to code</div>
+                    <div class="carousel-caption">Code to learn <br/>Learn to code</div>
                 </a >
             </div>
             <div class="item">
                 <a href="javascript:;">
                     <img src="https://ww3.sinaimg.cn/large/006tNbRwgy1fdat9p65qfj31040i2adf.jpg">
-                    <div class="carousel-caption">Code to learn, <br/>Learn to code</div>
+                    <div class="carousel-caption">Code to learn <br/>Learn to code</div>
                 </a >
             </div>
         </div>
